<resources>
    <string name="app_name">Invest</string>
    <string name="portfolio">Portfolio</string>
    <string name="pieces_short">pcs</string>
    <string name="profile">Profile</string>
    <string name="welcome">Welcome to Investing!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="firstname">First name</string>
    <string name="lastname_optional">Last name (optional)</string>
    <string name="go_back">Go back</string>
    <string name="in_portfolio_text">In the portfolio</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="search">Search</string>
    <string name="esoteric_analysis">Esoteric analysis</string>
    <string name="the_fool">The Fool</string>
    <string name="the_magician">The Magician</string>
    <string name="the_high_priestess">The High Priestess</string>
    <string name="the_empress">The Empress</string>
    <string name="the_emperor">The Emperor</string>
    <string name="the_hierophant">The Hierophant</string>
    <string name="the_lovers">The Lovers</string>
    <string name="the_chariot">The Chariot</string>
    <string name="justice">Justice</string>
    <string name="the_hermit">The Hermit</string>
    <string name="wheel_of_fortune">Wheel of Fortune</string>
    <string name="strength">Strength</string>
    <string name="the_hanged_man">The Hanged Man</string>
    <string name="death">Death</string>
    <string name="temperance">Temperance</string>
    <string name="the_devil">The Devil</string>
    <string name="the_tower">The Tower</string>
    <string name="the_moon">The Moon</string>
    <string name="the_sun">The Sun</string>
    <string name="interval_1_min">M1</string>
    <string name="interval_2_min">M2</string>
    <string name="interval_3_min">M3</string>
    <string name="interval_5_min">M5</string>
    <string name="interval_10_min">M10</string>
    <string name="interval_15_min">M15</string>
    <string name="interval_30_min">M30</string>
    <string name="interval_hour">H1</string>
    <string name="interval_2_hour">H2</string>
    <string name="interval_4_hour">H4</string>
    <string name="interval_day">Day</string>
    <string name="interval_week">Week</string>
    <string name="interval_month">Month</string>
    <string name="not_iir_disclaimer">Not an individual investment recommendation</string>
    <string name="search_stock_placeholder">Enter name or ticker</string>
    <string name="start_investing">Start investing now!</string>
    <string name="error_occurred">Some error occurred…</string>
    <string name="no_results">Nothing was found</string>
    <string name="stock_search">Stock search</string>
    <string name="buying">Buying</string>
    <string name="selling">Selling</string>
    <string name="order_completed">Order has been completed</string>
    <string name="lots_amount">Amount of lots</string>
    <string name="available_lots">Available: %1$s lots</string>
    <string name="pcs_in_lot">(1 lot = %1$s pc)</string>
    <string name="total_value">Total value</string>
    <string name="empty_portfolio_message">Your portfolio is still empty</string>
    <string name="refresh">Refresh</string>
    <string name="confirm">Confirm</string>
    <string name="dismiss">Dismiss</string>
    <string name="updating_prediction_title">Updating the prediction</string>
    <string name="updating_prediction_text">Update the prediction only in case of significant changes in the market</string>
    <string name="invalid_email">Enter valid e-mail</string>
    <string name="invalid_firstname">First name should not contain characters</string>
    <string name="invalid_lastname">Last name should not contain characters</string>
    <string name="invalid_password">The password must contain characters of both registers and consist of at least 8 characters. It must also contain at least one digit</string>
    <string name="email_already_registered">An account with this email already exists</string>
    <string name="invalid_credentials">Invalid password</string>
    <string name="user_not_found">The user with the specified email was not found</string>
    <string name="unknown_error">Unknown error</string>
    <string name="logout">Log out</string>
    <string name="switch_to_candlestick_chart">Switch to candlestick chart</string>
    <string name="switch_to_line_chart">Switch to line chart</string>
    <string name="connectivity_available">Back Online!</string>
    <string name="connectivity_unavailable">No Internet Connection!</string>
    <string name="connectivity_icon_description">Connectivity Icon</string>
</resources>